--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.9",
     "react-navigation-stack": "^1.9.0",
     "react-navigation-tabs": "^2.5.5"
