--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-native": "0.61.0",
     "react-native-gesture-handler": "^1.4.1",
